--- a/clase_1/index.html
+++ b/clase_1/index.html
@@ -4,24 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lenguajes aplicados en la indistria</title>
+    <title>Historia de Siemens</title>
 </head>
 <body>
-    <H1>Lenjuages de programcion.</H1>
-        <h2>Software</h2>
-            <h3>Lenguaje C</h3>
-            <p>Utilizado tanto en la creacion de software o realizar sistemas embebidos en Microchio</p>
-            <h3>C++</h3>
-            <p>Utilizado en la programacion de mas orientada a objeto y en sistemas embebidos de otra complejidaddes</p>
-            <h3>Python</h3>
-            <p>Lenguaje interpretado de alto nivel de codigo abierto, utlizado en procesamientod e datos, software y sistemas embebidos utilizando MicroPython</p>
-    <h2>Industriales</h2>
-            <h3>PLC Siemnes</h3>
-            <p>Siemens la empresa que desde sus comienzos en 1847 con sus innovaciones en la mejora su telegrafo, aplico programacion logica computada</p>
-            <h3>LUA</h3>
-            <p>aplicado en hardware industriales donde requiera rapdez ejemplo en telemetrias</p>
-            <h3>Logic RS232</h3>
+    <main>
+        <header>
+            <h1>Breve historia de Siemens</h1>
+        </header>
+        <section>
+            <h2>Comenzemos...</h2>
+            <p>Siemens AG es un conglomerado de empresas alemanas con sedes en Berlín y Múnich, considerada como la mayor empresa de fabricación industrial de Europa con 190 sucursales a lo largo del mundo. Siemens opera en 4 sectores principales: el sector industrial, energético, de salud (Siemens Healthineers) y de infraestructuras y ciudades. La empresa se caracteriza por el desarrollo de equipamiento de diagnóstico médico generando un 12% de beneficios después de su división de automatización industrial. Siemens emplea 379.000 personas alrededor del mundo reportando ingresos globales de 83 mil millones de € en el año 2018. El grupo está representado en 190 países y es una de las compañías más grandes del mundo en ingeniería eléctrica y electrónica. </p>
+            <h3>Histia de sus comiensos</h3>
+            <p>La empresa fue fundada el 1 de octubre de 1847 en un piso interior de la calle Schöneberg n.º 19, Berlín por Werner von Siemens y Johann Georg Halske, 2 bajo el nombre de Telegraphen-Bauanstalt von Siemens & Halske; a partir de 1897, Siemens & Halske AG.
+            En 1848, la compañía construyó la primera línea telegráfica de larga distancia en Europa l; 500 km de Berlín a Fráncfort del Meno. Construyó también líneas telegráficas en Rusia, y en 1867, Siemens completó la monumental línea telegráfica Indo-Europea de (Calcuta a Londres) 3 </p>
+            <p>A finales del siglo XIX comenzó a construirse en Berlín Siemensstadt, un barrio residencial e industrial que acoge a sus empleados. En 1903, se fundó Siemens-Schuckertwerke. En 1919 se fundó Osram GmbH; Siemens & Halske y otros tres grupos alemanes llevaron a cabo esta acción (entre ellos AEG). Las acciones de Osram son 100% de Siemens AG en la actualidad. En 1932 se fundó Siemens-Reiniger-Werke AG, que se dedicaba a la medicina.
+            A partir de 1966 se conoce como Siemens AG, que fue la unión de Siemens & Halske, Siemens-Reiniger-Werke y Siemens-Schuckertwerke. Esta acción se llevó a cabo bajo el mandato de Ernst von Siemens, nieto de Werner. Empleaba al menos 359.000 personas en 2011.</p>
+            <img src="./img/Werner-von-Siemens.png" alt="Werner von Siemens">
+            <img src="./img/siemens_1.jpg" alt="Siemens">
 
-<!-- jjeje -->
+        </section>
+        <hr>
+        <footer>
+            <p>Realizado Chrisitan Ruiz - Practica Diplomatura Full Stack</p>
+        </footer>
+    </main>
 </body>
 </html>
