se agrego CSS clase 3

--- a/clase_2/index.html
+++ b/clase_2/index.html
@@ -10,6 +10,13 @@
     <main>
         <header>
             <h1>Breve historia de Siemens</h1>
+            <nav>
+                 <ul>
+                    <li>Home</li>
+                    <li><a href="./plc.html">PLC </a></li>
+                    <li><a href="./contacto.html">Contacto</a> </li>
+                 </ul>
+            </nav>
         </header>
         <section>
             <h2>Comenzemos...</h2>
@@ -21,6 +28,7 @@
             A partir de 1966 se conoce como Siemens AG, que fue la unión de Siemens & Halske, Siemens-Reiniger-Werke y Siemens-Schuckertwerke. Esta acción se llevó a cabo bajo el mandato de Ernst von Siemens, nieto de Werner. Empleaba al menos 359.000 personas en 2011.</p>
             <img src="./img/Werner-von-Siemens.png" alt="Werner von Siemens">
             <img src="./img/siemens_1.jpg" alt="Siemens">
+            <video src="#" controls></video>
 
         </section>
         <hr>
