--- a/clase_4/index.html
+++ b/clase_4/index.html
@@ -1,1 +1,64 @@
-dfkljhgfrkij
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Clase CSS</title>
+</head>
+
+<body>
+    <header class="encabezado">
+        <h1>Gestion Tools</h1>
+        <nav class="navegacion">
+            <ul class="menu">
+                <li><a href="#">Home</a> </li>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Documentaciones </a>
+                    <ul class="sub_doc">
+                        <li><a href="./Docs.html">RS-232</a></li>
+                        <li><a href="">Modbus</a></li>
+ 
+                     </ul>
+                </li>
+                <li><a href="#">Quien soy</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section>
+        <article class="articulo">
+            <p>Tecnologia, documentacion, ligistica y almacenamiento de datos en operaciones de hidrocarburos</p>
+
+        </article>
+        <article class="articulo_1">
+            <div class="publication"><p>WITSML es un estándar para la transmisión de datos técnicos entre organizaciones en la industria del petróleo. Continúa siendo desarrollado por un grupo de interés especial facilitado por Energistics para desarrollar estándares XML para el intercambio de datos de perforación, terminación e intervenciones. Las organizaciones a las que se dirige WITSML incluyen empresas de energía, empresas de servicios, contratistas de perforación, proveedores de aplicaciones y agencias reguladoras.Una plataforma de perforación o una plataforma en alta mar moderna utiliza una amplia gama de contratistas especializados, cada uno de los cuales necesita comunicar datos a la compañía petrolera que opera la plataforma y entre sí. Históricamente, esto se hacía con la transferencia en serie de datos ASCII.</p></div>
+            <div class="publication"><p>Modbus es un protocolo de comunicación abierto, utilizado para transmitir información a través de redes en serie entre dispositivos electrónicos. El dispositivo que solicita la información se llama maestro Modbus y los dispositivos que suministran la información son los esclavos Modbus. En realidad, esto significa que un dispositivo esclavo no puede ofrecer información; debe esperar a que se le pida. El maestro escribirá datos en los registros de un dispositivo esclavo y leerá los datos de los registros de un dispositivo esclavo. Por lo tanto, en una red Modbus estándar, hay un maestro y hasta 247 esclavos, cada uno con una dirección de esclavo única de 1 a 247. El maestro también puede escribir información a los esclavos. Además, esta red de comunicación industrial usa los protocolos RS232/RS485/RS422. Su simplicidad y el hecho de que los fabricantes pueden incorporarlo en sus productos sin cargo alguno ha ayudado a que se convierta en el método más popular de conexión de dispositivos electrónicos industriales.En consecuencia, son estos protocolos abiertos los que muchos fabricantes adaptan para integrar fácilmente sus productos en el mercado.</p></div>
+        </article>
+    </section>
+    <footer class="pie">
+        <p>Pagina Web realizada en Desarrollador inicial Front end - UTN - Diplomarua en Desarrollador Full Stack
+            Devoloper</p>
+        <ol>
+            <il>
+                <div class="img_small"><img class="img_footer" src="./img/yanel_riarte.jpeg" alt="Yanel Riarte"> Yanel
+                    Riarte</div>
+            </il>
+            <il>
+                <div class="img_small"></div><img class="img_footer" src="./img/matias_gimenez.jpeg"
+                    alt="Matias Gimenez"> Matias Gimenez</div>
+            </il>
+            <il>
+                <div class="img_small"><img class="img_footer" src="./img/user.jpg" alt="Christian"> Christian Ruiz</il<
+                        /div>
+            </il>
+            <il>
+                <div class="img_small"><img class="img_footer" src="./img/github.png" alt="GitHub"> GitHub</div>
+            </il>
+
+        </ol>
+    </footer>
+</body>
+
+</html>
