--- a/clase_4/rs232.html
+++ b/clase_4/rs232.html
@@ -11,11 +11,20 @@
     <header>
         <Header class="encabezado_rs232">
             <h1>Protocolo RS 232</h1>
-            <nav class="menu">
-                <ul>
-                    <li><a href="./index.html">Home</a> </li>
+            <nav class="navegacion">
+                <ul class="menu">
+                    <li><a href="#">Home</a> </li>
                     <li><a href="#">Inicio</a></li>
-                    <li><a href="./Docs.html">Documentacion</a></li>
+                    <li><a href="#">Documentaciones </a>
+                        <ul class="sub_doc">
+                            <li><a href="./rs232.html">RS-232</a></li>
+                            <li><a href="">Modbus RTU</a></li>
+                            <li><a href="">Modbus TCP/IP</a></li>
+                            <li><a href="">Profinet</a></li>
+                            <li><a href="">Profibus</a></li>
+                            <li><a href="">RS-485</a></li>
+                         </ul>
+                    </li>
                     <li><a href="#">Quien soy</a></li>
                 </ul>
             </nav>
@@ -27,14 +36,26 @@
         El RS-232 consiste en un conector tipo DB-25 (de 25 pines), aunque es normal encontrar la versión de 9 pines (DE-9, o popularmente mal denominados DB-9), más barato e incluso más extendido para cierto tipo de periféricos (como el ratón serie de la PC)</p>
     </article>
     <footer class="pie">
-        <p>Pagina Web realizada en Desarrollador inicial Front end - UTN - Diplomarua en Desarrollador Full Stack Devoloper</p>
-        <ol>
-            <il><img class="img_footer" src="./img/yanel_riarte.jpeg" alt="Yanel Riarte"> Yanel Riarte</il>
-            <il><img class="img_footer" src="./img/matias_gimenez.jpeg" alt="Matias Gimenez"> Matias Gimenez</il>
-            <il><img class="img_footer" src="./img/user.jpg" alt="Christian"> Christian Ruiz</il>
-            <il><img class="img_footer" src="./img/github.png"alt="GitHub"> GitHub</il>
+        <p>Pagina Web realizada en Desarrollador inicial Front end - UTN - Diplomarua en Desarrollador Full Stack
+            Devoloper</p>
+        <ul>
+            <li>
+                <div class="img_small"><img class="img_footer" src="./img/yanel_riarte.jpeg" alt="Yanel Riarte"> Yanel
+                    Riarte</div>
+                </li>
+            <li>
+                <div class="img_small"></div><img class="img_footer" src="./img/matias_gimenez.jpeg"
+                    alt="Matias Gimenez"> Matias Gimenez</div>
+            </li>
+            <li>
+                <div class="img_small"><img class="img_footer" src="./img/user.jpg" alt="Christian"> Christian Ruiz</il<
+                        /div>
+            </il>
+            <li>
+                <div class="img_small"><img class="img_footer" src="./img/github.png" alt="GitHub"> GitHub</div>
+            </li>
 
-        </ol>
+        </ul>
     </footer>
 </body>
 </html>
