--- a/clase_4/index.html
+++ b/clase_4/index.html
@@ -18,9 +18,12 @@
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Documentaciones </a>
                     <ul class="sub_doc">
-                        <li><a href="./Docs.html">RS-232</a></li>
-                        <li><a href="">Modbus</a></li>
- 
+                        <li><a href="./rs232.html">RS-232</a></li>
+                        <li><a href="">Modbus RTU</a></li>
+                        <li><a href="">Modbus TCP/IP</a></li>
+                        <li><a href="">Profinet</a></li>
+                        <li><a href="">Profibus</a></li>
+                        <li><a href="">RS-485</a></li>
                      </ul>
                 </li>
                 <li><a href="#">Quien soy</a></li>
@@ -40,24 +43,24 @@
     <footer class="pie">
         <p>Pagina Web realizada en Desarrollador inicial Front end - UTN - Diplomarua en Desarrollador Full Stack
             Devoloper</p>
-        <ol>
-            <il>
+        <ul>
+            <li>
                 <div class="img_small"><img class="img_footer" src="./img/yanel_riarte.jpeg" alt="Yanel Riarte"> Yanel
                     Riarte</div>
-            </il>
-            <il>
+                </li>
+            <li>
                 <div class="img_small"></div><img class="img_footer" src="./img/matias_gimenez.jpeg"
                     alt="Matias Gimenez"> Matias Gimenez</div>
-            </il>
-            <il>
+            </li>
+            <li>
                 <div class="img_small"><img class="img_footer" src="./img/user.jpg" alt="Christian"> Christian Ruiz</il<
                         /div>
             </il>
-            <il>
+            <li>
                 <div class="img_small"><img class="img_footer" src="./img/github.png" alt="GitHub"> GitHub</div>
-            </il>
+            </li>
 
-        </ol>
+        </ul>
     </footer>
 </body>
 
